--- a/index.xhtml
+++ b/index.xhtml
@@ -1,101 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="fr">
-  <head>
-    <title>Destination Spa - Institut de beauté &amp; Spa à BEAUTIRAN</title>
-    <style>
-      * {
-          padding: 0;
-          margin: 0;
-      }
-
-      html {
-          --fg: rgb(40, 50, 90, 1.00);
-          --gg: rgb(40, 50, 90, 0.85);
-          --sh: rgb(40, 50, 90, 0.30);
-          --bg: white;
-      }
-
-      html, body {
-          height: 100%;
-          margin: 0;
-      }
-
-      body {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-      }
-
-      body > div {
-          min-width: 10cm;
-          max-width: 10cm;
-
-          border-radius: 50px;
-
-          padding: 1.2cm;
-
-          box-shadow: 0 8px 20px var(--sh);
-
-          text-align: center;
-          font-family: sans-serif;
-          color: var(--fg);
-
-          font-size: 110%;
-      }
-
-      body > div > * {
-          margin-bottom: 20px;
-      }
-
-      body > div > *:last-child {
-          margin-bottom: 0;
-      }
-
-      h3 {
-          margin-bottom: 5px;
-      }
-
-      h1, em {
-          display: inline-block;
-
-          background-color: var(--gg);
-          color: var(--bg);
-
-          font-style: normal;
-          font-weight: bold;
-      }
-
-      h1 {
-          border-radius: 20px;
-          padding: 5px 15px;
-      }
-
-      em {
-          border-radius: 10px;
-          padding: 2px 8px;
-      }
-    </style>
-  </head>
-  <body>
-    <div>
-      <h1>Destination Spa</h1>
-
-      <div>
-        <h3>Institut de beauté &amp; Spa</h3>
-        <h5>à BEAUTIRAN</h5>
-      </div>
-
-      <p>
-
-        Retrouvez prochainement le site web
-        de <em>Destination Spa</em> à cette adresse
-
-      </p>
-      <p>
-
-        Réservez votre soin au <em>05 57 54 87 23</em>
-
-      </p>
-    </div>
-  </body>
-</html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="fr"><head><title>Destination Spa - Institut de beauté à Beautiran</title><style></style><link href="res/style/reset.css" rel="stylesheet" /><link href="res/style/generic.css" rel="stylesheet" /><link href="res/style/home.css" rel="stylesheet" /><link href="res/style/benefits.css" rel="stylesheet" /></head><body><header><div><h1>Destination Spa</h1><h2>Institut de beauté à Beautiran</h2><p class="note"><code>BLACK FRIDAY</code> <strong>0.1</strong>% de réduction <em>everywhere</em></p></div></header><main><div><section id="benefits"><a href="#benefits"><h3><a class="back" href="#">←</a><span>Voir les Soins</span></h3></a><section id="category0"><a href="#category0" class="row"><div><h4><a class="back" href="#benefits">←</a><span>Les trucs pas trop trop cher.</span></h4><p>Retrouvez ici les trucs pas trop trop cher mais un peu quand même faut
+pas déconner.</p></div><figure><img src="res/images/07.jpg" alt="un truc de spa" /></figure></a><div class="row"><div><h5>Skin Plus 800</h5><p>Ça c'est très bien, allez viens.</p><a href="https://fr.wikipedia.org/wiki/Aaron_Carter" class="book">réserver ce soin</a></div><span class="price"><span>39</span><span>€</span><span>00</span></span></div><div class="row"><div><h5>Skin Good 600</h5><p>Ça c'est pas mal du tout je te promet.</p><a href="https://fr.wikipedia.org/wiki/Balakh_Sher_Mazari" class="book">réserver ce soin</a></div><span class="price"><span>18</span><span>€</span><span>50</span></span></div></section><section id="category1"><a href="#category1" class="row"><div><h4><a class="back" href="#benefits">←</a><span>Les trucs plus cher.</span></h4><p>Retrouvez ici les trucs chers et vraiment bien. Si vous avez des sous
+venez les dépenser chez moi, en plus je suis trop cool.</p></div></a><div class="row"><div><h5>Skin Ultra 900</h5><p>Presque le nec plus ultra mais pas tout à fait.</p><a href="https://fr.wikipedia.org/wiki/Mauro_Forghieri" class="book">réserver ce soin</a></div><span class="price"><span>74</span><span>€</span><span>90</span></span><figure><img src="res/images/08.jpg" alt="un truc de spa" /></figure></div><div class="row"><div><h5>Skin <em>Hyper</em> 950X</h5><p>Le nec plus ultra. C'est trop de la balle.</p><a href="https://fr.wikipedia.org/wiki/Francis_Rion" class="book">réserver ce soin</a></div><span class="price"><span>107</span><span>€</span><span>00</span></span><figure><img src="res/images/09.jpg" alt="un truc de spa" /></figure></div></section></section><section id="infos"><a href="#infos"><h3><a class="back" href="#">←</a><span>Horaires &amp; Contacts</span></h3></a><table><tbody><tr><td>lundi</td><td></td><td></td></tr><tr><td>mardi</td><td>10h00 - 12h00</td><td>14h00 - 19h00</td></tr><tr><td>mercredi</td><td>10h00 - 12h00</td><td>14h00 - 19h00</td></tr><tr><td>jeudi</td><td>10h00 - 12h00</td><td>14h00 - 19h00</td></tr><tr><td>vendredi</td><td>10h00 - 12h00</td><td></td></tr><tr><td>samedi</td><td></td><td>14h00 - 19h00</td></tr><tr><td>dimanche</td><td></td><td></td></tr></tbody></table><address><ul><li><a href="tel:0102030405">01 02 03 04 05</a></li><li><a href="mailto:abc@xyz.com">abc@xyz.com</a></li><li><pre><code>12 Rue Saint-Merri
+75004 Paris</code></pre></li></ul></address><ul class="socials"><li><a href="https://facebook.com/DanielThrasherOfficial"><img src="res/images/facebook.svg" alt="logo de facebook" /></a></li><li><a href="https://instagram.com/danielthrasher"><img src="res/images/instagram.svg" alt="logo de instagram" /></a></li></ul></section><section id="introduction"><a href="#introduction"><h3><a class="back" href="#">←</a><span>Présentation</span></h3></a><div class="left"><figure><img src="res/images/01.jpg" alt="salon" /><figcaption>salon</figcaption></figure><figure><img src="res/images/02.jpg" alt="salle à manger" /><figcaption>salle à manger</figcaption></figure><figure><img src="res/images/04.jpg" alt="salle de bain" /><figcaption>salle de bain</figcaption></figure><figure><img src="res/images/03.jpg" alt="cuisine" /><figcaption>cuisine</figcaption></figure></div><div class="right"><p>Pierre de Saxe-Cobourg-Gotha (connu également sous les prénoms de
+Pedro Augusto), prince du Brésil et prince de Saxe-Cobourg, est né à
+Rio de Janeiro, au Brésil, le 19 mars 1866, et mort à Tulln an der
+Donau, en Autriche, le 6 juillet 1934.</p>
+<p>Aîné des petits-enfants de l'empereur <strong>Pierre II du Brésil</strong>, le
+prince Pierre est, selon l'article 117 de la Constitution de 1824,
+l'héritier présomptif en second du souverain jusqu'à la naissance de
+son cousin, Pierre d'Orléans-Bragance, en
+<a href="fr.wikipedia.org/wiki/1875">1875</a>. Après cette date, Pierre n'admet
+pas d'être rétrogradé dans l'ordre de succession au trône.</p></div></section></div></main></body></html>
