--- a/index.xhtml
+++ b/index.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="fr"><head><title>Destination Spa - Institut de Beauté &amp; Spa à Beautiran</title><meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/><link rel="preload" as="font" type="font/woff" crossorigin="anonymous" href="./res/font/fengardoneue_regular-webfont.woff"/><link rel="preload" as="image" href="./res/images/vector/back.svg"/><link rel="preload" as="image" href="./res/images/vector/back.hover.svg"/><link rel="stylesheet" href="./res/style/minified.css"/></head><body><div><header><div><h1>Destination Spa</h1><h2>Institut de Beauté &amp; Spa à Beautiran</h2><p class="note"><a href="#infos">Retrouvez toute l'actualité de votre institut</a><br/>
 <a href="#infos">sur <strong>Facebook</strong> et <strong>Instagram</strong> !</a></p></div></header><main><div><section id="benefits"><a href="#benefits"><h3><span class="back" onclick="window.location.href='#';return false;"><span/></span><span>Les Soins</span></h3></a><section id="category-100"><a href="#category-100" class="row"><figure><img src="./res/images/low_res/SVGE_0.webp" alt="TODO"/></figure><div><h4><span class="back" onclick="window.location.href='#benefits';return false;"><span/></span><span>Soins du Visage Bio</span></h4><p>Soins du visage bio, avec la marque <em>Ekia</em>,
 l'experte des peaux ménopausées. Personnalisables
-car aucune peau ne ressemble à la votre.</p></div></a><div class="row"><figure><img src="./res/images/low_res/SVGE_absolu.webp" alt="TODO"/></figure><div><h5>Les Soins Absolus <code>01:10</code></h5><div class="description"><a class="more" href="#benefit-100-100">+ voir plus</a><div class="content"><p>À chaque début de soin, un diagnostic de
+car aucune peau ne ressemble à la vôtre.</p></div></a><div class="row"><figure><img src="./res/images/low_res/SVGE_absolu.webp" alt="TODO"/></figure><div><h5>Les Soins Absolus <code>01:10</code></h5><div class="description"><a class="more" href="#benefit-100-100">+ voir plus</a><div class="content"><p>À chaque début de soin, un diagnostic de
 peau est réalisé afin d'établir le soin le
 plus adapté à votre degré de maturité de
 peau :</p>
@@ -23,7 +23,7 @@ une peau mature carencée.</p></div></div><div class="price_book"><div><span cla
 rides. Soin complet tout en un pour une
 peau régénérée et défatiguée.</p></div></div><div class="price_book"><div><span class="price"><span>79</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div><br/><div class="row"><figure><img src="./res/images/low_res/SVGE_detox.webp" alt="TODO"/></figure><div><h5>Soin Détox <code>00:50</code></h5><div class="description"><a class="more" href="#benefit-100-200">+ voir plus</a><div class="content"><p>Soin pour les peaux inflammées avec
 imperfections, pores obstrués, marques de
-fatigue, avec un besoin de détoxifié et
+fatigue, avec un besoin de détoxifier et
 d'affiner le grain de peau.</p></div></div><div class="price_book"><div><span class="price"><span>59</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div><div class="row"><figure><img src="./res/images/low_res/SVGE_indien.webp" alt="TODO"/></figure><div><h5>Massage Traditionnel Indien du Visage <code>00:30</code></h5><div class="description"><a class="more" href="#benefit-100-250">+ voir plus</a><div class="content"><p>Massage ancestral venant du Kerala. Des
 techniques anti-âge au massage crânien, il
 permet d'évacuer la fatigue et de lâcher
@@ -92,15 +92,15 @@ prise.</p></div></div><div class="price_book"><div><span class="price"><span>39<
 et Adolescents</span></h4><p>Tout les soins adaptés pour les peaux jeunes et
 sensible des enfants, à partir de 6 ans.</p></div></a><div class="row"><figure><img src="./res/images/low_res/SEEA_escale.webp" alt="TODO"/></figure><div><h5>Ma Mini‑escale Bien‑être <code>00:20</code></h5><div class="description"><div class="content"><p>Modelage en douceur du dos, pour les
 enfants à partir de 6 ans.</p></div></div><div class="price_book"><div><span class="price"><span>28</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div><div class="row"><figure><img src="./res/images/low_res/SEEA_dos.webp" alt="TODO"/></figure><div><h5>Soin du Dos Anti‑stress <code>01:00</code></h5><div class="description"><a class="more" href="#benefit-250-150">+ voir plus</a><div class="content"><p>Soin du dos recommandé à partir de 12 ans,
-ce soin permet de détoxifié la peau en
+ce soin permet de détoxifier la peau en
 douceur avec un gommage et un
 enveloppement doux adapté à votre peau. Le
 soin se termine par un modelage du dos
-relaxant idéale lors de périodes
+relaxant idéal lors de périodes
 stressantes comme les examens ou le
 passage en classe supérieure. Ce soin est
 également adapté pour les pré-adultes, qui
-passe leurs derniers diplôme avant de
+passent leurs derniers diplôme avant de
 rentrer dans la vie active.</p></div></div><div class="price_book"><div><span class="price"><span>60</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div><br/><div class="row"><figure><img src="./res/images/low_res/SEEA_detox.webp" alt="TODO"/></figure><div><h5>Soin du Visage Détox <code>00:50</code></h5><div class="description"><a class="more" href="#benefit-250-200">+ voir plus</a><div class="content"><p>Soin détoxifiant pour retrouver un grain
 de peau plus lisse et des imperfections
 atténués. Nettoyage de peau en douceur dès
@@ -118,12 +118,12 @@ un maillot semi-intégral ou intégral</p></div></div><div class="price_book"><d
 un maillot échancré ou brésilien</p>
 <p><code>15€</code> en supplément pour<br/>
 un maillot semi-intégral ou intégral</p></div></div><div class="price_book"><div><span class="price"><span>47</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div></section></section><section id="infos"><a href="#infos"><h3><span class="back" onclick="window.location.href='#';return false;"><span/></span><span>Horaires &amp; Contacts</span></h3></a><table><tbody><tr><th>lundi</th><td><span>fermé</span></td></tr><tr><th>mardi</th><td>09h30 à 19h00</td></tr><tr><th>mercredi</th><td>09h30 à 19h00</td></tr><tr><th>jeudi</th><td>09h30 à 19h00</td></tr><tr><th>vendredi</th><td>09h30 à 19h00</td></tr><tr><th>samedi</th><td>09h30 à 17h00</td></tr><tr><th>dimanche</th><td><span>fermé</span></td></tr></tbody></table><address><ul><li><a href="tel:0557548723">05 57 54 87 23</a></li><li><a href="mailto:destinationspa.beautiran@gmail.com">destinationspa.beautiran@gmail.com</a></li><li><a href="https://maps.google.com/maps?ll=44.700089783530224,-0.4500258189318575&amp;q=destination+spa+beautiran+france"><pre><code>62 ROUTE NATIONALE 113
-33640 BEAUTIRAN</code></pre></a></li><li><ul class="socials"><li><a href="https://facebook.com/DestinationSpa.InstitutdeBeaute"><img src="./res/images/vector/facebook.svg" alt="page facebook"/></a></li><li><a href="https://instagram.com/destinationspa33"><img src="./res/images/vector/instagram.svg" alt="page instagram"/></a></li></ul></li></ul></address></section><section id="introduction"><a href="#introduction"><h3><span class="back" onclick="window.location.href='#';return false;"><span/></span><span>L'Institut</span></h3></a><div class="left"><figure><img src="./res/images/low_res/PRES_logo.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_marine.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_accueil.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_cabine_soin.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_salle_attente.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_hammam.webp" alt="TODO"/></figure></div><div class="right"><p><strong><em>Marine</em>, esthéticienne et créatrice</strong><br/>
+33640 BEAUTIRAN</code></pre></a></li><li><ul class="socials"><li><a href="https://facebook.com/DestinationSpa.InstitutdeBeaute"><img src="./res/images/vector/facebook.svg" alt="page facebook"/></a></li><li><a href="https://instagram.com/destinationspa33"><img src="./res/images/vector/instagram.svg" alt="page instagram"/></a></li></ul></li></ul></address></section><section id="introduction"><a href="#introduction"><h3><span class="back" onclick="window.location.href='#';return false;"><span/></span><span>L'Institut</span></h3></a><div class="left"><figure><img src="./res/images/low_res/PRES_logo.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_marine.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_accueil.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_cabine_soin.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_salle_attente.webp" alt="TODO"/></figure><figure><img src="./res/images/low_res/PRES_hammam.webp" alt="TODO"/></figure></div><div class="right"><p><strong><em>Marine</em>, esthéticienne et fondatrice</strong><br/>
 <strong>de <em>Destination Spa</em></strong></p>
 <p>Après plusieurs expériences en tant que spa praticienne et
 esthéticienne, j'ai pu réaliser mon souhait de créer un
 centre de beauté où le bien-être est au cœur des priorités
-afin que toute personne reparte avec le sourire.</p>
+afin que chaque personne reparte avec le sourire.</p>
 <p><em>Destination Spa</em> est un institut de beauté et Spa
 proposant des moments de détente au hammam, des voyages
 bien-être de 30 minutes à 1 heure 45 avec différentes
@@ -133,7 +133,7 @@ comme des soins du visage bio spécialisés dans le
 vieillissement cutanés et des peaux ménopausées, des soins
 enfants et adolescents, du maquillage pour toutes
 occasions et des épilations.</p>
-<p>Chaque personne est unique ! Un diagnostique sera réalisé
+<p>Chaque personne est unique ! Un diagnostic sera réalisé
 ensemble afin d'apporter des conseils personnalisés.</p>
 <p>Retrouvez dans votre institut de beauté, des produits
 naturels et/ou biologiques, de fabrication Française.
@@ -163,7 +163,7 @@ une peau mature carencée.</p></div></div><div class="price_book"><div><span cla
 rides. Soin complet tout en un pour une
 peau régénérée et défatiguée.</p></div></div><div class="price_book"><div><span class="price"><span>79</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div></section><section id="benefit-100-200"><a><h4><span class="back" onclick="window.location.href='#category-100';return false;"><span/></span><span/></h4></a><div class="row"><figure><img src="./res/images/low_res/SVGE_detox.webp" alt="TODO"/></figure><div><h5>Soin Détox <code>00:50</code></h5><div class="description"><div class="content"><p>Soin pour les peaux inflammées avec
 imperfections, pores obstrués, marques de
-fatigue, avec un besoin de détoxifié et
+fatigue, avec un besoin de détoxifier et
 d'affiner le grain de peau.</p></div></div><div class="price_book"><div><span class="price"><span>59</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div></section><section id="benefit-100-250"><a><h4><span class="back" onclick="window.location.href='#category-100';return false;"><span/></span><span/></h4></a><div class="row"><figure><img src="./res/images/low_res/SVGE_indien.webp" alt="TODO"/></figure><div><h5>Massage Traditionnel Indien du Visage <code>00:30</code></h5><div class="description"><div class="content"><p>Massage ancestral venant du Kerala. Des
 techniques anti-âge au massage crânien, il
 permet d'évacuer la fatigue et de lâcher
@@ -228,15 +228,15 @@ techniques anti-âge au massage crânien, il
 permet d'évacuer la fatigue et de lâcher
 prise.</p></div></div><div class="price_book"><div><span class="price"><span>39</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div></section><section id="benefit-250-100"><a><h4><span class="back" onclick="window.location.href='#category-250';return false;"><span/></span><span/></h4></a><div class="row"><figure><img src="./res/images/low_res/SEEA_escale.webp" alt="TODO"/></figure><div><h5>Ma Mini‑escale Bien‑être <code>00:20</code></h5><div class="description"><div class="content"><p>Modelage en douceur du dos, pour les
 enfants à partir de 6 ans.</p></div></div><div class="price_book"><div><span class="price"><span>28</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div></section><section id="benefit-250-150"><a><h4><span class="back" onclick="window.location.href='#category-250';return false;"><span/></span><span/></h4></a><div class="row"><figure><img src="./res/images/low_res/SEEA_dos.webp" alt="TODO"/></figure><div><h5>Soin du Dos Anti‑stress <code>01:00</code></h5><div class="description"><div class="content"><p>Soin du dos recommandé à partir de 12 ans,
-ce soin permet de détoxifié la peau en
+ce soin permet de détoxifier la peau en
 douceur avec un gommage et un
 enveloppement doux adapté à votre peau. Le
 soin se termine par un modelage du dos
-relaxant idéale lors de périodes
+relaxant idéal lors de périodes
 stressantes comme les examens ou le
 passage en classe supérieure. Ce soin est
 également adapté pour les pré-adultes, qui
-passe leurs derniers diplôme avant de
+passent leurs derniers diplôme avant de
 rentrer dans la vie active.</p></div></div><div class="price_book"><div><span class="price"><span>60</span><span>€</span><span>00</span></span><a href="https://www.planity.com/destination-spa-33640-beautiran" class="book"><span>réserver</span></a></div></div></div></div></section><section id="benefit-250-200"><a><h4><span class="back" onclick="window.location.href='#category-250';return false;"><span/></span><span/></h4></a><div class="row"><figure><img src="./res/images/low_res/SEEA_detox.webp" alt="TODO"/></figure><div><h5>Soin du Visage Détox <code>00:50</code></h5><div class="description"><div class="content"><p>Soin détoxifiant pour retrouver un grain
 de peau plus lisse et des imperfections
 atténués. Nettoyage de peau en douceur dès
